// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer Snapshots renders audio player correctly 1`] = `
<DocumentFragment>
  <div
    class="relative "
    data-testid="media-player"
  >
    <audio
      class="w-full"
      controls=""
      data-testid="audio-element"
      src="test-audio.mp3"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders default video player correctly 1`] = `
<DocumentFragment>
  <div
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with all features enabled correctly 1`] = `
<DocumentFragment>
  <div
    aspectratio="16:9"
    class="relative custom-media-player"
    controlsvariant="floating"
    data-testid="media-player"
    style="width: 800px; height: 600px;"
  >
    <video
      autoplay=""
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      height="600"
      loop=""
      poster="poster.jpg"
      width="800"
    >
      <source
        data-testid="source-element"
        src="test-video-hd.mp4"
        type="video/mp4"
      />
      <source
        data-testid="source-element"
        src="test-video-sd.mp4"
        type="video/mp4"
      />
      <track
        data-testid="track-element"
        kind="subtitles"
        label="English"
        src="subtitles-en.vtt"
        srclang="en"
      />
      <track
        data-testid="track-element"
        kind="subtitles"
        label="Deutsch"
        src="subtitles-de.vtt"
        srclang="de"
      />
    </video>
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with autoplay correctly 1`] = `
<DocumentFragment>
  <div
    class="relative "
    data-testid="media-player"
  >
    <video
      autoplay=""
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with controls hidden correctly 1`] = `
<DocumentFragment>
  <div
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with custom className correctly 1`] = `
<DocumentFragment>
  <div
    class="relative custom-media-player"
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with custom width and height correctly 1`] = `
<DocumentFragment>
  <div
    class="relative "
    data-testid="media-player"
    style="width: 800px; height: 600px;"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      height="600"
      src="test-video.mp4"
      width="800"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with different aspect ratios correctly: MediaPlayer with aspect ratio 1:1 1`] = `
<DocumentFragment>
  <div
    aspectratio="1:1"
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with different aspect ratios correctly: MediaPlayer with aspect ratio 4:3 1`] = `
<DocumentFragment>
  <div
    aspectratio="4:3"
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with different aspect ratios correctly: MediaPlayer with aspect ratio 16:9 1`] = `
<DocumentFragment>
  <div
    aspectratio="16:9"
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with different aspect ratios correctly: MediaPlayer with aspect ratio 21:9 1`] = `
<DocumentFragment>
  <div
    aspectratio="21:9"
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with different control variants correctly: MediaPlayer with controls variant default 1`] = `
<DocumentFragment>
  <div
    class="relative "
    controlsvariant="default"
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with different control variants correctly: MediaPlayer with controls variant floating 1`] = `
<DocumentFragment>
  <div
    class="relative "
    controlsvariant="floating"
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with different control variants correctly: MediaPlayer with controls variant minimal 1`] = `
<DocumentFragment>
  <div
    class="relative "
    controlsvariant="minimal"
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with different control variants correctly: MediaPlayer with controls variant transparent 1`] = `
<DocumentFragment>
  <div
    class="relative "
    controlsvariant="transparent"
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with different quality options correctly 1`] = `
<DocumentFragment>
  <div
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
    >
      <source
        data-testid="source-element"
        src="test-video-hd.mp4"
        type="video/mp4"
      />
      <source
        data-testid="source-element"
        src="test-video-sd.mp4"
        type="video/mp4"
      />
      <source
        data-testid="source-element"
        src="test-video-low.mp4"
        type="video/mp4"
      />
    </video>
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with loop correctly 1`] = `
<DocumentFragment>
  <div
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      loop=""
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with multiple sources correctly 1`] = `
<DocumentFragment>
  <div
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
    >
      <source
        data-testid="source-element"
        src="test-video.mp4"
        type="video/mp4"
      />
      <source
        data-testid="source-element"
        src="test-video.webm"
        type="video/webm"
      />
    </video>
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with playback speed controls correctly 1`] = `
<DocumentFragment>
  <div
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with poster image correctly 1`] = `
<DocumentFragment>
  <div
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      poster="poster.jpg"
      src="test-video.mp4"
    />
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MediaPlayer Snapshots renders with tracks correctly 1`] = `
<DocumentFragment>
  <div
    class="relative "
    data-testid="media-player"
  >
    <video
      class="w-full h-full"
      controls=""
      data-testid="video-element"
      src="test-video.mp4"
    >
      <track
        data-testid="track-element"
        kind="subtitles"
        label="English"
        src="subtitles-en.vtt"
        srclang="en"
      />
      <track
        data-testid="track-element"
        kind="subtitles"
        label="Deutsch"
        src="subtitles-de.vtt"
        srclang="de"
      />
    </video>
    <div
      class="absolute bottom-0 left-0 right-0"
      data-testid="media-controls"
    >
      <div
        class="h-1 bg-gray-600 w-full"
        data-testid="progress-bar"
      >
        <div
          class="h-full bg-primary-500"
          style="width: 0%;"
        />
      </div>
      <div
        class="flex items-center p-2"
      >
        <button
          aria-label="Play"
          class="mr-2"
        >
          ▶
        </button>
        <button
          aria-label="Pause"
          class="mr-2"
        >
          ⏸
        </button>
        <button
          aria-label="Mute"
          class="mr-2"
        >
          🔇
        </button>
        <button
          aria-label="Unmute"
          class="mr-2 hidden"
        >
          🔊
        </button>
        <input
          aria-label="Volume"
          class="w-24 mr-2"
          max="1"
          min="0"
          step="0.1"
          type="range"
          value="1"
        />
        <button
          aria-label="Enter fullscreen"
        >
          ⛶
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
